more on interpreting RMSE

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -140,7 +140,7 @@ Y_test <- Sacramento %>%
   unlist()
 ```
 
-Next, we'll use cross-validation to choose $k$. In k-nn classification, we used accuracy to see how well our predictions matched the true labels. Here in the context of k-nn regression we will use  root mean square error ($RMSE$) instead. If the predictions are very close to the true values, then $RMSE$ will be small. If, on the other-hand, the predictions are very different to the true values, then $RMSE$ will be quite large. Thus, when we are doing cross validation to choose $k$, we want to choose the $k$ that gives us the smallest $RMSE$.
+Next, we'll use cross-validation to choose $k$. In k-nn classification, we used accuracy to see how well our predictions matched the true labels. Here in the context of k-nn regression we will use root mean square error ($RMSE$) instead. If the predictions are very close to the true values, then $RMSE$ will be small. If, on the other-hand, the predictions are very different to the true values, then $RMSE$ will be quite large. Thus, when we are doing cross validation to choose $k$, we want to choose the $k$ that gives us the smallest $RMSE$.
 
 The mathematical formula for calculation $RMSE$ is shown below: 
 
@@ -234,7 +234,9 @@ test_results <- defaultSummary(modelvalues)
 test_results
 ```
 
-Our final model's test error as assessed by $RMSE$ is 91620.4. And what does our final model look like when we predict across all possible house sizes we might encounter in the Sacremento area? We plotted it above where we explored how $k$ affects k-nn regression, but we show it again now, along with the code for how we generated it:
+Our final model's test error as assessed by $RMSE$ is 91620.4. But what does this $RMSE$ score mean? When we calculated test set prediction accuracy when we performed k-nn classification the highest possible value was 1, and if we got an value close to that it was easy to assess how well our model did on at least one new data set that had never been used to choose our model (so we didn't violate the golden rule of statistical/machine learning). So what about $RMSE$, what is it out of? Unfortunately there is no scale for $RMSE$ (instead it is measured in the units of the target/response variable), and so it is a bit hard to interpret. For now, let's consider this approach to thinking about $RMSE$ from our testing data set: as long as its not WAY worse than the cross-validation $RMSPE$ of our best model then we can say that we're not doing too much worse on the test data than we did on the training data, and so it appears to be generalizing OK to a new data set it has never seen before. In future courses on statistical/machine learning we will learn more about how to interpret $RMSE$ from our testing data set and other ways to assess our model.
+
+And what does our final model look like when we predict across all possible house sizes we might encounter in the Sacremento area? We plotted it above where we explored how $k$ affects k-nn regression, but we show it again now, along with the code for how we generated it:
 
 ```{r predict_all, fig.height = 4, fig.width = 5}
 set.seed(1234)
