added prediction point

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -98,15 +98,25 @@ small_plot +
 Now that we have the 5 nearest neighbours to our new observation that we would like to predict the price for, we can use their values to predict a selling price for the home we are interested in buying that is 2000 square feet. Specifically, we can take the mean (or average) of these 5 values as our predicted value.
 
 ```{r predicted}
-small_sacramento %>% 
+prediction <- small_sacramento %>% 
   mutate(diff = abs(2000 - sqft)) %>% 
   arrange(diff) %>% 
   head(5) %>% 
   summarise(predicted = mean(price))
-
+prediction
 ```
 
-Our predicted price is \$270,257.40, which is much less than \$350,000, and so perhaps we might want to offer less than the list price that the house is advertised at. Simple right? Not quite. We have all the same unanswered questions here with k-nn regression that we had with k-nn classification. Which $k$ do we choose? And, is our model any good at making predictions? We'll shortly address how to answer these questions in the context of k-nn regression.
+```{r predictedViz, echo = FALSE, fig.height = 4, fig.width = 5}
+small_plot +
+  geom_segment(aes(x = 2000, y = 300500, xend = 1910, yend = 300500), col = "orange") + 
+  geom_segment(aes(x = 2000, y = 290000, xend = 1720, yend = 290000), col = "orange") + 
+  geom_segment(aes(x = 2000, y = 168750, xend = 1669, yend = 168750), col = "orange") +
+  geom_segment(aes(x = 2000, y = 276500, xend = 1650, yend = 276500), col = "orange") + 
+  geom_segment(aes(x = 2000, y = 315537, xend = 2367, yend = 315537), col = "orange")  +
+  geom_point(aes(x = 2000, y = prediction[[1]]), color = "red", size = 2.5) 
+```
+
+Our predicted price is \$270,257.40 (shown as a red point above), which is much less than \$350,000, and so perhaps we might want to offer less than the list price that the house is advertised at. Simple right? Not quite. We have all the same unanswered questions here with k-nn regression that we had with k-nn classification. Which $k$ do we choose? And, is our model any good at making predictions? We'll shortly address how to answer these questions in the context of k-nn regression.
 
 ## Assessing a knn regression model
 
