fixed RMSE equation

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -154,7 +154,7 @@ Next, we'll use cross-validation to choose $k$. In k-nn classification, we used 
 
 The mathematical formula for calculation $RMSE$ is shown below: 
 
-$$RMSE = \sqrt{\frac{1}{n}\sum\limits_{i=1}^{\infty}(y_i - \hat{y_i})^2}$$
+$$RMSE = \sqrt{\frac{1}{n}\sum\limits_{i=1}^{n}(y_i - \hat{y_i})^2}$$
 
 Where:
 
