fixed k-nn regr learning objective

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -13,9 +13,9 @@ By the end of the chapter, students will be able to:
 * Recognize situations where a simple regression analysis would be appropriate for making predictions.
 * Explain the k-nearest neighbour (k-nn) regression algorithm and describe how it differs from k-nn classification.
 * Interpret the output of a k-nn regression.
-* In a dataset with two variables, perform k-nearest neighbour regression in R using `caret::knnregTrain()` to predict the values for a test dataset.
+* In a dataset with two variables, perform k-nearest neighbour regression in R using `caret::train()` to predict the values for a test dataset.
 * Using R, execute cross-validation in R to choose the number of neighbours.
-* Using R, evaluate k-nn regression prediction accuracy using  a test data set and an appropriate metric (*e.g.*, means square prediction error).
+* Using R, evaluate k-nn regression prediction accuracy using  a test data set and an appropriate metric (*e.g.*, root means square prediction error).
 * Describe advantages and disadvantages of the k-nearest neighbour regression approach.
 
 ## Regression 
@@ -265,3 +265,18 @@ plot_final
 ```
 
 
+## Strengths and limitations of k-nn regression
+
+As with k-nn classification (or any prediction algorithm for that manner), k-nn regression has both strengths and weaknesses. Some are listed here:
+
+### Strengths of k-nn regression
+
+1. Simple and easy to understand
+2. No assumptions about what the data must look like 
+3. Works well with non-linear relationships (i.e., if the relationship is not a straight line)
+
+### Limitations of k-nn regression
+
+1. As data gets bigger and bigger, k-nn gets slower and slower, quite quickly
+2. Does not perform well with a large number of predictors
+3. Does not predict well beyond the range of values input in your training data
