added multiple line plot

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -7,7 +7,7 @@ Continued explortion of k-nn regression in higher dimensions. We will also begin
 By the end of the chapter, students will be able to:
 
 * In the context of k-nn regression, compare and contrast goodness of fit and prediction properties (namely MSE vs MSPE).
-* In a dataset with 2 variables, perform simple ordinary least squares regression in R using `lm()` to predict the values for a test dataset.
+* In a dataset with 2 variables, perform simple ordinary least squares regression in R using `caret`'s `train` with `method = "lm"` to predict the values for a test dataset.
 * Compare and contrast predictions obtained from k-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
 
 ## $RMSE$ versus $RMPSE$
@@ -57,5 +57,12 @@ Using linear regression on this small data set to predict the sale price for a 2
 
 ```{r severalLines, echo = FALSE, fig.height = 4, fig.width = 5}
 
-
+small_plot + 
+  geom_abline(intercept = -64542.23, slope = 190, color = "green") +
+  geom_abline(intercept = -6900, slope = 175, color = "purple") +
+  geom_abline(intercept = -64542.23, slope = 160, color = "red") 
 ```
+
+Linear regression chooses the straight line of "best fit" by choosing the line that minimzes the vertical distance between itself and each of the data points. 
+
+
