added more fixes

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -6,7 +6,7 @@ Continued explortion of k-nn regression in higher dimensions. We will also begin
 ## Learning objectives 
 By the end of the chapter, students will be able to:
 
-* In the context of k-nn regression, compare and contrast goodness of fit and prediction properties (namely MSE vs MSPE).
+* In the context of k-nn regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
 * In a dataset with 2 variables, perform simple ordinary least squares regression in R using `caret`'s `train` with `method = "lm"` to predict the values for a test dataset.
 * Compare and contrast predictions obtained from k-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
 
