--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -14,7 +14,7 @@ By the end of the chapter, students will be able to:
 The error output we have been getting from `caret` to assess how well our k-nn regression models predict is labelled as `RMSE` for root mean square error. The equation for calculating $RMSE$ is shown in [the previous chapter](regression1.html#assessing-a-knn-regression-model). So far, we have called this error $RMSE$ in this textbook as well, however, in certain contexts the correct term becomes $RMPSE$, which stands for root mean square prediction error. The same formula is used to calculate $RMPSE$ and $RMSE$, however these separate terms exists to specify what the error is being calculated on. $RMPSE$ is specifically referring to the error when predicting on future data (e.g., the validation set(s), or the testing set), not the training set. Whereas, $RMSE$ is specifically referring to the error when predicting on the training data set and is an attempt to get at model goodness of fit on the data used to fit the model. From this point on in the course, we will be using the terms $RMPSE$ and $RMSE$ in their appropriate contexts.
 
 ## Linear regression
-k-nn is not the only the other type of regression, there are many and one common and quite useful type of regression is called linear regression. Linear regression is similar to k-nn regression in that the target/response variable is expected to be quantitative, however, one way it varies quite differently is how the training data is used to predict a value for a new observation. Instead of looking at the $k$-nearest neighbours and averaging over their values for a prediction, in linear regression all the training data points are used to create a straight line of "best fit", and then the line is used to "look-up" the predicted value.
+k-nn is not the only the other type of regression, there are many, and one common and quite useful type of regression is called linear regression. Linear regression is similar to k-nn regression in that the target/response variable is expected to be quantitative, however, one way it varies quite differently is how the training data is used to predict a value for a new observation. Instead of looking at the $k$-nearest neighbours and averaging over their values for a prediction, in linear regression all the training data points are used to create a straight line of "best fit", and then the line is used to "look-up" the predicted value.
 
 For example, let's revisit the smaller version of the Sacramento housing data set and the prediction case where we come across a new house we are interested in purchasing, and it is 2000 square feet! Its advertised list price is $350,000 should we give them what they are asking? Or is that overpriced and we should offer less? 
 
@@ -130,7 +130,7 @@ lm_test_results
 
 Our final model's test error as assessed by $RMSPE$ is 86688.47. Remember that this is in units of the target/response variable, and here that is US Dollars (USD). Does this mean our model is "good" at predicting house sale price based off of the predictor of home size? Again answering this is tricky to answer and requires to use domain knowledge and think about the application you are using the prediction for. 
 
-And what does our final linear regression model look like when we predict across all possible house sizes we might encounter in the Sacremento area? There is a plotting function in the `tidyverse`, `geom_smooth`, that allows us to do this easily by adding a layer on our plot with the linear regression predicted line of "best fit". The default for this add's a plausible range to this line that we are not interested in at this point, so to avoid plotting it, we provide the argument `se = FALSE` in our call to `geom_smooth`.
+And what does our final linear regression model look like when we predict across all possible house sizes we might encounter in the Sacremento area? There is a plotting function in the `tidyverse`, `geom_smooth`, that allows us to do this easily by adding a layer on our plot with the linear regression predicted line of "best fit". The default for this adds a plausible range to this line that we are not interested in at this point, so to avoid plotting it, we provide the argument `se = FALSE` in our call to `geom_smooth`.
 
 ```{r lm_predict_all, fig.height = 4, fig.width = 5}
 
@@ -147,7 +147,7 @@ lm_plot_final
 
 ## Comparing linear and k-nn regression
 
-Now that we have a general understanding of both linear and k-nn regression, we can start to compare and contrast these methods as well as the predictions made by them. To start, lets look at the visualization of the linear regression model predictions for the Sacramento real estate data (predicting price from house size) and the "best" k-nn regression model obtained from the same problem:
+Now that we have a general understanding of both linear and k-nn regression, we can start to compare and contrast these methods as well as the predictions made by them. To start, let's look at the visualization of the linear regression model predictions for the Sacramento real estate data (predicting price from house size) and the "best" k-nn regression model obtained from the same problem:
 
 ```{r compareRegression, echo = FALSE, fig.height = 4, fig.width = 10}
 k = data.frame(k = 51)
@@ -180,7 +180,6 @@ There can however also be a disadvantage to using a linear regression model in s
 
 How do these two models compare on this data set? On the visualizations above we also printed the $RMPSE$ as calculated from predicting on the test data set that was not used to train/fit the models. The $RMPSE$ for the linear regression model is less than the $RMPSE$ for the k-nn regression model, and thus if were were comparing these in practice we would choose to use the linear regression model to make our predictions because of this (in addition to the fact the the linear regression model is more interpretable). 
 
-Why is the linear regression model doing better at predicting on the test set than the k-nn regression model?
 
 ## Additional readings/resources
 - Pages 59-71 of [Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) with Applications in R by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
