--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -174,7 +174,25 @@ lm_plot_final <- lm_plot_final +
 grid.arrange(lm_plot_final, plot_final, ncol = 2)
 ```
 
-What differences do we observe from the visualization above? One obvious difference is the shape of the blue lines. In linear regression we are restricted to a straight line, whereas in k-nn regression our line is much more flexible and can be quite wiggly. There can be an advantage to limiting the model to a straight line, as linear regression does, in that a straight line model is quite interpretable and can be defined by two numbers, the y-intercept and the slope. The slope is particularly meaningful for interpretation, as it tells us what unit increase in the target/response variable we predict given a unit increase in the predictor/explanatory variable. k-nn regression, as simple as it is to implement and understand, has no such interpretability from it's wiggly line. 
+What differences do we observe from the visualization above? One obvious difference is the shape of the blue lines. In linear regression we are restricted to a straight line, whereas in k-nn regression our line is much more flexible and can be quite wiggly. There can be an advantage to limiting the model to a straight line, as linear regression does, in that a straight line model is quite interpretable and can be defined by two numbers, the y-intercept and the slope. The slope is particularly meaningful for interpretation, as it tells us what unit increase in the target/response variable we predict given a unit increase in the predictor/explanatory variable. Additionally, because our model is restricted to a straight line, we can even use the mathematical equation for a straight line as a basis to write a mathematical expression of our model. 
+
+Remembering that the equation for a straight line is: 
+
+$$Y = \beta_0 + \beta_1X$$
+Where:
+
+- $\beta_0$ is the y-intercept of the line (the value where the line cuts the y-axis)
+- $\beta_1$ is the slope of the line
+
+We can then write:
+
+$$house\: price = \beta_0 + \beta_1house\: size$$
+
+And finally, fill in the values for $\beta_0$ and $\beta_1$ from the straight line (we will show you how to get these from R next week) to get:
+
+$$house\: price = -64542.2 + 175.9*house\: size$$
+
+k-nn regression, as simple as it is to implement and understand, has no such interpretability from it's wiggly line.
 
 There can however also be a disadvantage to using a linear regression model in some cases, particularly when the relationship between the target and the predictor is not linear, but instead someother shape, such as curved or circular. In these cases the prediction model from a linear regression will have high bias, meaning that model/predicted values does not match the actual observed values very well. Such a model would probably have a quite high $RMSE$ when assessing model goodness of fit on the training data and a quite high $RMPSE$ when assessing model prediction quality on a test data set. On such a data set, k-nn regression may fare better. Additionally, there are other types of regression you can learn about in future courses that may do even better at predicting with such data.
 
