made suggested edits to Chapter 9 as suggested by @msalibian in #3

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -1,7 +1,7 @@
 # Regression, continued {#regression2}
 
 ## Overview 
-Continued explortion of k-nn regression in higher dimensions. We will also begin to compare k-nn to linear models in the context of regression.
+Continued exploration of k-nn regression in higher dimensions. We will also begin to compare k-nn to linear models in the context of regression.
 
 ## Learning objectives 
 By the end of the chapter, students will be able to:
@@ -63,7 +63,7 @@ small_plot +
   geom_abline(intercept = -64542.23, slope = 160, color = "red") 
 ```
 
-Linear regression chooses the straight line of "best fit" by choosing the line that minimzes the vertical distance between itself and each of the observed data points. From the lines shown above, that is the blue line. What exactly do we mean by the vertical distance between the predicted values (which fall along the line of "best fit") and the observed data points? We illustrate these distances in the plot below with a red line:
+Linear regression chooses the straight line of "best fit" by choosing the line that minimzes the **average** vertical distance between itself and each of the observed data points. From the lines shown above, that is the blue line. What exactly do we mean by the vertical distance between the predicted values (which fall along the line of "best fit") and the observed data points? We illustrate these distances in the plot below with a red line:
 
 ```{r verticalDistToMin,  echo = FALSE, fig.height = 4, fig.width = 5}
 small_sacramento <- small_sacramento %>% 
@@ -74,11 +74,11 @@ small_plot +
 
 ```
 
-How do we assess the predictive accuracy of a linear regression model? We use the same error function that we used with k-nn regression: $RMPSE$ (note the use of $RMPSE$ versus $RMSE$ here as discussed in the first section of this chapter).
+How do we assess the predictive accuracy of a linear regression model? We use the same measure of predictive performance we used with k-nn regression, $RMPSE$ (note the use of $RMPSE$ versus $RMSE$ here as discussed in the first section of this chapter).
 
 ## Linear regression in R using `caret`
 
-We can perform linear regression in R using the `caret` package in a very similar manner to how we performed k-nn regression, using the `train` function. To do this, instead of setting `method = "knn"` we instead set `method = "lm"`. Another difference is that we do not need to choose $k$ in the context of linear regression. In fact, in the case of a simple linear regression (where we only have one predictor) like the one illustrated in this chapter there are no "things" to fiddle with (these things, like $k$, have a formal name: hyperparameters) and so we do not need to perform cross validation. Below we illustrate how we can use the `caret` package to predict house sale price given house size using a linear regression approach using the full Sacramento real estate data set:
+We can perform linear regression in R using the `caret` package in a very similar manner to how we performed k-nn regression, using the `train` function. To do this, instead of setting `method = "knn"` we instead set `method = "lm"`. Another difference is that we do not need to choose $k$ in the context of linear regression and so we do not need to perform cross validation. Below we illustrate how we can use the `caret` package to predict house sale price given house size using a linear regression approach using the full Sacramento real estate data set:
 
 As usual, we should start by putting some test data away in a lock box that we can come back to after we choose our final model, so let's take care of that business now. 
 
